# accs-builder-daemon

./: .gitmodules  .pre-commit-config.yaml  AGENTS.md  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
docker/: Dockerfile.agent  Dockerfile.builder
src/accs_agent/: __init__.py  cli.py
src/accs_app/: __init__.py
src/accs_app/agents/: __init__.py  builder.py  service.py
src/accs_app/db/: __init__.py  repo_base.py
src/accs_builder_daemon/: __init__.py  cli.py
src/accs_builder_daemon/domain/: __init__.py  tick.py
src/accs_builder_daemon/repo/: __init__.py  builder_repo.py
src/accs_infra/: __init__.py
src/accs_infra/db/: __init__.py  repo_base.py  session.py
tests/: test_builder_repo_wiring.py  test_builder_tick.py  test_pg_integration.py  test_repo_conn_injection.py  test_service_agent.py
